Some design changes and DB filling

--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -8,7 +8,7 @@
 <header th:replace="fragments/navbar::nav"></header>
 <main>
     <div class="container mt-4">
-        <h1 class="text-center mb-4">All Users</h1>
+        <h1 class="text-center mb-4 text-white">All Users</h1>
         <div class="row">
             <div th:each="user : ${users}" class="col-md-6 col-lg-4 mb-4">
                 <div class="card h-100">
@@ -17,7 +17,7 @@
                         <h5 class="card-title" th:text="${user.fullName}">User Name</h5>
                         <p class="card-text" th:text="${user.email}">User email.</p>
                         <p class="card-text" th:text="${user.bio}">Brief biography of the user.</p>
-                        <p class="card-text">
+                        <p class="card-text font-weight-bold">Roles:
                             <span th:each="role : ${user.role}" th:text="${role.name} + ' '">Role</span>
                         </p>
                         <form th:method="post" th:action="@{/admin/role-change/{id}(id=${user.id})}">
