--- a/src/main/resources/templates/exercises-trainee.html
+++ b/src/main/resources/templates/exercises-trainee.html
@@ -50,6 +50,7 @@
 
             <div class="col-12">
                 <h4 class="text-white heading-center">Total Intensity: <span id="total-intensity">0</span></h4>
+                <em class="text-white">(Intensity is calculated by multiplying number of sets per exercise with their intensity)</em>
             </div>
         </div>
     </div>
