--- a/src/main/resources/templates/illegal-state-coach-assigned.html
+++ b/src/main/resources/templates/illegal-state-coach-assigned.html
@@ -2,10 +2,14 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Error</title>
+    <link rel="stylesheet" type="text/css" href="/css/error.css">
 </head>
 <body>
-<h1>An Error Occurred</h1>
-<p>You have already assigned a coach!</p>
-<div class="text-center text-white mt-5">We are sorry! Please navigate to <a th:href="@{/home}">home page</a>...</div>
+<div class="bubble">
+    <h1>An Error Occurred</h1>
+    <p>You have already assigned a coach!</p>
+    <div class="text-center text-white mt-5">We are sorry! Please navigate to <a th:href="@{/home}">home page</a>...</div>
+</div>
+
 </body>
 </html>
