--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,7 @@ nav {
 
 nav .home {
     padding: 0.5em 1em;
-    flex: 1 0 50%;
+    flex: 1 0 0%;
 }
 
 nav .links {
@@ -32,7 +32,7 @@ nav .links {
     list-style-type: none;
     justify-content: end;
     padding: 0.5em;
-    flex: 0 1 50%;
+    flex: 0 1 90%;
 }
 
 nav > .home > a {
@@ -103,6 +103,7 @@ textarea {
     background-color: rgba(39 41 42 / 40%);
     backdrop-filter: blur(15px);
     margin-bottom: 8px;
+    margin-top: 60px;
     border: #b3b8bd solid 1px;
 }
 
@@ -126,31 +127,9 @@ ul li:hover {
     padding-left: 0.5em;
     gap: 55px;
 }
-.my-paintings {
-    border-radius: 4px;
-    padding: 6px;
-    color: rgba(207, 230, 243, 0.78);
-    background-color: rgba(87, 86, 83, 0.92);
-}
-
-.most-rated {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 1em;
-}
 
 
-.my-paintings-first-row {
-    padding: 0.5em;
-    color: whitesmoke;
-    display: flex;
-    align-content: flex-start;
-    align-items: center;
-    margin-bottom: 0.2em;
-    /*width: 100%;*/
-    height: 60px;
-    /*flex: 1 0 100%;*/
-}
+
 
 .second-info {
     padding: 0.6em 0.5em 0 0.5em;
@@ -163,6 +142,21 @@ ul li:hover {
     justify-content: space-between;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+}
+
+input.btn-link {
+    color: #b5d8f1;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding:0px 20px 0px 0px;
+    font: inherit;
+    display: inline;
+}
+input.btn-link:hover {
+    text-decoration: none;
 }
 
 .buttons-info {
@@ -245,19 +239,11 @@ footer {
     z-index: 10;
 }
 
-#names, #authors {
-    display: flex;
-    justify-content: flex-start;
-    align-content: center;
-    padding-left: 5px;
-}
 
 #names {
     flex: 0 0 45%;
 }
-#authors {
-    flex: 0 0 30%;
-}
+
 
 .text-stroke {
     text-shadow: 0.07em 0 white,
@@ -289,5 +275,6 @@ a:hover {
     padding: 0.1em 0;
 }
 button.btn{
-    background:transparent;
+    padding: 5px;
+    margin: 5px;
 }
