--- a/src/main/resources/templates/supplements-all-preview.html
+++ b/src/main/resources/templates/supplements-all-preview.html
@@ -8,7 +8,7 @@
 <header th:replace="fragments/navbar::nav"></header>
 <main>
     <div class="container mt-4">
-        <h1 class="text-center mb-4">Supplements</h1>
+        <h1 class="text-center mb-4 text-white">Supplements</h1>
         <div class="row">
             <div th:each="supplement : ${supplements}" class="col-md-6 col-lg-4 mb-4">
                 <div class="card h-100">
