--- a/src/main/resources/templates/trainee-coaches.html
+++ b/src/main/resources/templates/trainee-coaches.html
@@ -8,7 +8,7 @@
 <header th:replace="fragments/navbar::nav"></header>
 <main>
     <div class="container mt-4">
-        <h1 class="text-center mb-4">Our Coaches</h1>
+        <h1 class="text-center mb-4 text-white">Our Coaches</h1>
         <div class="row">
             <div th:each="coach : ${coaches}" class="col-md-6 col-lg-4 mb-4">
                 <div class="card h-100">
