--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,8 +32,6 @@
 
 
 
-<footer>
-    <p>All rights reserved. In Partnership with SoftUni.</p>
-</footer>
+<footer th:replace="fragments/navbar::footer"></footer>
 </body>
 </html>
