--- a/src/main/resources/templates/supplements-all-preview.html
+++ b/src/main/resources/templates/supplements-all-preview.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/navbar::head">
     <title>Coaches Showcase</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <header th:replace="fragments/navbar::nav"></header>
 <main>
     <div class="container mt-4">
-        <h1 class="text-center mb-4 text-white">Supplements</h1>
+        <div class="title-button">
+            <h1 class="text-center mb-4 text-white" th:text="#{supplements}">Supplements</h1>
+            <a sec:authorize="isAuthenticated() and hasRole('ADMIN')" class="btn btn-info" href="/supplement-add" th:text="#{nav_bar_supplement_add}">Add Supplement</a>
+        </div>
+
         <div class="row">
             <div th:each="supplement : ${supplements}" class="col-md-6 col-lg-4 mb-4">
                 <div class="card h-100">
@@ -16,11 +22,11 @@
                     <div class="card-body">
                         <h5 class="card-title" th:text="${supplement.name}">supplement Name</h5>
                         <p class="card-text" th:text="${supplement.description}">Description</p>
-                        <p class="card-subtitle mb-2 text-muted" th:text="${supplement.caloriesPerServing}">Calories Per Serving</p>
+                        <p class="card-subtitle mb-2 text-muted" th:text="'Calories Per Serving: ' + ${supplement.caloriesPerServing}">Calories Per Serving</p>
 
 
                         <form th:method="get" th:action="@{/supplement/details/{id}(id=${supplement.id})}">
-                            <button type="submit" class="btn btn-danger">Details</button>
+                            <button type="submit" class="btn btn-info">Details</button>
                         </form>
 
                     </div>
