--- a/src/main/resources/templates/login-error.html
+++ b/src/main/resources/templates/login-error.html
@@ -17,7 +17,7 @@
         <div class="form-group">
             <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Login</span></h1>
             <div class="label-holder text-white d-flex justify-content-center">
-                <label for="email" class="h3 mb-2">Email</label>
+                <label for="email" class="h3 mb-2">Username</label>
             </div>
             <input type="text" class="form-control" id="email" name="email"/>
         </div>
