--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,8 +34,8 @@
             <span class="display-4"> Anonymous </span>
         </th:block>
         <div>
-            <a class="button-link" sec:authorize="isAuthenticated() and hasRole('TRAINEE')" href="https://172.20.10.3:8181/receiver.ejs">Livestream</a>
-            <a class="button-link" sec:authorize="isAuthenticated() and hasRole('COACH')" href="https://172.20.10.3:8181/caller.ejs">Livestream</a>
+            <a class="button-link" sec:authorize="isAuthenticated() and hasRole('TRAINEE')" href="https://localhost:8181/receiver.ejs">Livestream</a>
+            <a class="button-link" sec:authorize="isAuthenticated() and hasRole('COACH')" href="https://localhost:8181/caller.ejs">Livestream</a>
         </div>
         </body>
     </div>
